# jsonschema-schema-validator

./: .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
jsonschema_schema_validator/: __main__.py  validator.py
tests/: test_boolean.py  test_integer.py  test_number.py  test_object.py
